// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled matches withError snapshot: with error mount 1`] = `
.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-3 {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-3:after {
  content: '';
  display: table;
  clear: both;
}

<Styled(MultiChoice)
  error="example"
  label="example"
>
  <MultiChoice
    className="emotion-1"
    error="example"
    label="example"
    meta={Object {}}
  >
    <Styled(div)
      className="emotion-1"
    >
      <div
        className="emotion-3"
      >
        <Styled(LabelText)>
          <LabelText
            className="emotion-1"
          >
            <Styled(span)
              className="emotion-1"
            >
              <span
                className="emotion-0"
              >
                example
              </span>
            </Styled(span)>
          </LabelText>
        </Styled(LabelText)>
        example
      </div>
    </Styled(div)>
  </MultiChoice>
</Styled(MultiChoice)>
`;

exports[`Styled matches wrapper snapshot: wrapper mount 1`] = `
.emotion-9 {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-9:after {
  content: '';
  display: table;
  clear: both;
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-3 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-6 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Styled(MultiChoice)
  hint="example"
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <MultiChoice
    className="emotion-1"
    hint="example"
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <Styled(div)
      className="emotion-1"
      error="example"
    >
      <div
        className="emotion-9"
      >
        <Styled(LabelText)>
          <LabelText
            className="emotion-1"
          >
            <Styled(span)
              className="emotion-1"
            >
              <span
                className="emotion-0"
              >
                example
              </span>
            </Styled(span)>
          </LabelText>
        </Styled(LabelText)>
        <Styled(HintText)>
          <HintText
            className="emotion-1"
          >
            <Styled(span)
              className="emotion-1"
            >
              <span
                className="emotion-3"
              >
                example
              </span>
            </Styled(span)>
          </HintText>
        </Styled(HintText)>
        <Styled(ErrorText)>
          <ErrorText
            className="emotion-1"
          >
            <Styled(span)
              className="emotion-1"
            >
              <span
                className="emotion-6"
              >
                example
              </span>
            </Styled(span)>
          </ErrorText>
        </Styled(ErrorText)>
        example
      </div>
    </Styled(div)>
  </MultiChoice>
</Styled(MultiChoice)>
`;
